# symmetric_concordance

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/symmetric_concordance/: __init__.py  censoring.py  censoring_test.py  concordance.py  concordance_test.py
tests/: test_interop.py
